#VRML_SIM R2022a utf8
WorldInfo {
  coordinateSystem "NUE"
}
Viewpoint {
  orientation -0.6975715176473845 0.6823932118812558 0.218479935338484 2.6527280508729008
  position -0.3522526587237711 1.771507666115768 1.1869926528851593
}
TexturedBackground {
  texture "factory"
}
TexturedBackgroundLight {
}
WoodenBox {
  translation -0.2541 -4.44089e-16 0.0584928
  rotation -9.425611331662435e-12 -0.9999991412811586 -0.0013105101851505563 -5.307179586466759e-06
  name "wooden box(1)"
  size 0.508 0.2 0.01
}
WoodenBox {
  translation -0.513625 2.22045e-16 -0.444876
  rotation -2.39745e-09 1 5.74777e-18 -3.1415853071795863
  name "wooden box(3)"
  size 0.508 0.2 0.01
}
WoodenBox {
  translation -0.259053 -1.24345e-14 -0.325153
  rotation 2.39692e-09 1 -2.39692e-09 -1.5707953071795862
  name "wooden box(2)"
  size 0.251 0.2 0.01
}
WoodenBox {
  translation -0.257275 -1.37396e-07 -0.0600948
  rotation 0.7071072811862584 9.38186373076509e-07 0.7071062811858607 3.14159
  name "wooden box(4)"
  size 0.251 0.2 0.01
}
WoodenBox {
  translation -0.00641655 -1.11023e-14 -0.194548
  rotation 0.7038317649412603 -0.020571793129636928 0.7100687628582896 3.08798
  name "wooden box(5)"
  size 0.508 0.2 0.01
}
DEF area RectangleArena {
  translation -0.257628 -4.44089e-16 -0.192172
  rotation -0.5773502691896258 0.5773502691896258 0.5773502691896258 2.0943951023931957
  floorSize 1.016 1.016
  floorTileSize 0.508 0.508
  wallAppearance BrushedAluminium {
    colorOverride 0 0 0
  }
}
DEF epuck E-puck {
  hidden position_0_0 4.3623583120034975e-08
  hidden position_0_1 -7.78892910574176e-08
  hidden rotation_1 0 1 0 4.2146848510894035e-08
  hidden rotation_2 0.3408068343253378 -0.9401333424983616 8.908821576900685e-09 5.960464477539063e-08
  translation -0.639492 -8.8692e-05 -0.321232
  rotation -0.5782841563133984 0.5767187019324138 0.577046768813666 2.090628449155492
  controller "lab5task2"
  supervisor TRUE
  camera_width 50
  turretSlot [
    InertialUnit {
    }
    DEF righthinge HingeJoint {
      jointParameters HingeJointParameters {
        position 3.7108879421646294e-08
        axis -1 0 0
        anchor 0 0.025 0
      }
      device [
        RotationalMotor {
          name "right wheel motor"
          consumptionFactor 70
          controlPID 8 2 0.5
        }
        PositionSensor {
          name "right wheel sensor"
        }
      ]
      endPoint Solid {
        translation 0.045009957783800604 0.025013380757968086 -2.467193034861497e-05
        rotation 0.9999993203500037 0.001005273398757143 -0.0005905293593458941 4.636837084945819
        children [
          DEF WHEEL Transform {
            translation -0.007 0.01 -0.05
            rotation 0 0 1 1.57
            children [
              Shape {
                appearance PBRAppearance {
                  baseColor 0 0 0
                  transparency 1
                  roughness 1
                  metalness 0
                }
                geometry Cylinder {
                  height 0.01
                  radius 0.02
                }
              }
            ]
            rotationStep 0.25
          }
        ]
        name "right wheel(1)"
        boundingObject USE WHEEL
        physics DEF PHYSICS_WHEEL Physics {
          density -1
          mass 0.05
        }
        rotationStep 0.25
      }
    }
    DEF lefthinge HingeJoint {
      jointParameters HingeJointParameters {
        position -3.008853561433558e-08
        axis -1 0 0
        anchor 0 0.025 0
      }
      device [
        RotationalMotor {
          name "left wheel motor"
          consumptionFactor 70
          controlPID 8 0 0
        }
        PositionSensor {
          name "left wheel sensor"
        }
      ]
      endPoint Solid {
        translation -0.04501012942703833 0.024977671978655136 -4.5733976833852505e-05
        rotation -0.9999982113394417 0.0004727527236237725 -0.0018313445278607932 1.242580990200477
        children [
          DEF WHEEL Transform {
            translation 0.007 0 -0.05
            rotation 0 0 1 1.57
            children [
              Shape {
                appearance PBRAppearance {
                  baseColor 0.1 0.1 0.1
                  transparency 1
                  roughness 1
                  metalness 0
                }
                geometry Cylinder {
                  height 0.01
                  radius 0.02
                }
              }
            ]
            rotationStep 0.25
          }
        ]
        name "left wheel(1)"
        boundingObject USE WHEEL
        physics DEF PHYSICS_WHEEL Physics {
          density -1
          mass 0.05
        }
      }
    }
    DEF front_ds DistanceSensor {
      translation 0.045 0 -0.01
      rotation 0 1 0 0
      name "front_ds"
      recognitionColors [
        0 0 0
      ]
      lookupTable [
        0 0 0
        1.27 1.27 0
      ]
    }
    DEF right_ds DistanceSensor {
      translation 0.01 -0.035 -0.01
      rotation 0 0 1 -1.57
      name "right_ds"
      lookupTable [
        0 0 0
        1.27 1.27 0
      ]
    }
    DEF left_ds DistanceSensor {
      translation 0.01 0.035 -0.01
      rotation 0 0 1 1.57
      name "left_ds"
      lookupTable [
        0 0 0
        1.27 1.27 0
      ]
    }
    Camera {
      translation 0.03 0 -0.045
      name "camera1"
      recognitionColors [
        1 1 0
      ]
      fieldOfView 1.57
      width 80
      height 80
      recognition Recognition {
      }
    }
  ]
}
